-
Bug
-
Resolution: Done
-
Not Evaluated
-
4.7.4, 4.8.5
-
None
-
Windows.
-
bb0263eb80620b64057b6a0a1d6bccad3d3e6282
When writing binary resource data ('-binary') to stdout, on Windows, rcc performs LF → CRLF conversion, resulting in corrupt data that causes Qt to crash when trying to use the subsequently loaded resources.
This can be readily verified by comparing the results of writing an rcc data file with the '-o' option versus output redirection; the latter will be larger dues to additional 0x0d bytes added before all 0x0a bytes.
| For Gerrit Dashboard: QTBUG-39422 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 89859,8 | rcc: Prevent CRLF conversion on Windows for -binary | dev | qt/qtbase | Status: MERGED | +2 | 0 |